<resources>
    <string name="app_name">Wifi Everywhere</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_settings_">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_user_connected">New user connected to your wifi</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>


    <!-- Security  settings -->

    <string name="pref_header_security">Security</string>
    <string name="incrementar_datos_disponibles">Incrementar datos disponibles</string>
    <string name="dispones_de_solamente_9_gb_n_quieres_aumentar_tu_limte">Dispones de solamente 9 GB  ¿Quieres aumentar tu limte?</string>
    <string name="pack_1_gb_extra_por_1">Pack 1 GB extra por 1€</string>
    <string name="pack_5_gb_extra_por_4">Pack 5 GB extra por 4€</string>
    <string name="pack_10_gb_extra_por_7">Pack 10 GB extra por 7€</string>
    <string name="email">Email</string>
    <string name="todo">TODO</string>
    <string name="password">Password</string>
    <string name="resumen_de_datos_disponibles">Resumen de datos disponibles</string>
    <string name="has_compartido_30_gb">Has compartido 30 GB</string>
    <string name="has_consumido_21_gb">Has consumido 21 GB</string>
    <string name="dispones_de_9_gb_restantes">Dispones de 9 GB restantes</string>
    <string name="login">Login</string>
    <string name="no_account_yet_create_one">No account yet? Create one</string>
    <string name="configurar_wifi">Configurar wifi</string>
    <string name="buscar_wifi">buscar wifi</string>
    <string name="consutar_datos_disponibles">consutar datos disponibles</string>
    <string name="incrmentar_datos_disponibles">incrmentar datos disponibles</string>
    <string name="configuracion">Configuracion</string>
    <string name="cerrar_sesion">cerrar sesion</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="create_account">Create Account</string>
    <string name="already_a_member_login">Already a member? Login</string>
    <string name="failed_login">Login failed.</string>
    <string name="emailpassword_status_fmt">Test 1</string>
    <string name="firebase_status_fmt">TEst 2</string>
    <string name="notifications_admin_channel_name">adminchannel</string>
    <string name="notifications_admin_channel_description">adminchanneldescription</string>

</resources>
