<preference-headers xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/background">

    <!-- These settings headers are only used on tablets. -->

    <header
        android:fragment="com.wiffieverywhere.mattd.wiffi_everywhere.SettingsActivity_$GeneralPreferenceFragment"
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/pref_header_general" />

    <header
        android:fragment="com.wiffieverywhere.mattd.wiffi_everywhere.SettingsActivity_$NotificationPreferenceFragment"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/pref_header_notifications" />

    <header
        android:fragment="com.wiffieverywhere.mattd.wiffi_everywhere.SettingsActivity_$DataSyncPreferenceFragment"
        android:icon="@drawable/ic_sync_black_24dp"
        android:title="@string/pref_header_data_sync" />

    <header
        android:fragment="com.wiffieverywhere.mattd.wiffi_everywhere.SettingsActivity_$SecurityPreferenceFragment"
        android:icon="@drawable/ic_lock_black_24dp"
        android:title="Security" />

</preference-headers>
